<resources>
    <string name="app_name">IDVoice Example</string>
    <string name="biometrics_made_simple">Biometrics made simple</string>
    <string name="enroll">Enroll</string>
    <string name="verify">Verify</string>
    <string name="text_dependent">Text\nDependent</string>
    <string name="text_independent">Text\nIndependent</string>
    <string name="update_enrollment">Update enrollment</string>
    <string name="please_wait">Please wait until processing is complete</string>
    <string name="back">Back</string>
    <string name="speech_is_not_enough">Sorry, but the recorded speech is not enough for analysis</string>
    <string name="total_speech_length_is_not_enough">Sorry, but the total recorded speech length is not enough for analysis</string>
    <string name="relative_speech_length_is_not_enough">Sorry, but the relative recorded speech length is not enough for analysis</string>
    <string name="speech_is_too_noisy">The audio record has too much background noise. Please record in a quieter location</string>
    <string name="multi_speaker_detected_try_again">Multiple speakers detected. Please try again</string>
    <string name="multi_speaker_detected">Multiple speakers detected.</string>
    <string name="speech_has_too_long_reverberation">The audio record has strong echo. Please record in an another location</string>
    <string name="please_pronounce_phrase">Please to pronounce a phrase</string>
    <string name="hint_about_recording">Please say the phrase below</string>
    <string name="need_permissions">This app needs permissions for operation</string>
    <string name="enroll_tips">Speak about the last movie you watched\nTalk about your recent vacation\nDescribes where you are</string>
    <string name="header_about_enroll_tips">Hints to speak for 15–30 seconds:</string>
    <string name="please_start_talking">Please start talking. For example, about the last movie you watched.</string>
    <string name="record">Record</string>
    <string name="verification">Verification</string>
    <string name="liveness">Liveness</string>
    <string name="accept">Accept</string>
    <string name="notice_about_enroll">We need 15–30 seconds of continuous speech to create the best voiceprint\nThe good news is that you only need to do this once!</string>
    <string name="voice_is_spoofed">Voice is spoofed</string>
    <string name="voice_is_genuine">Voice is genuine</string>
    <string name="please_continue_talking">Well done. Please continue talking.</string>
    <string name="speech_is_not_live_enroll_again">Speech is not live. Synthesized voices can\'t be used for enrollment. Please record again.</string>
    <string name="renew_license">Renew License</string>
    <string name="license_issue">License issue</string>
    <string name="your_voicesdk_license_is_invalid">Your VoiceSDK license is invalid. To continue using the app, please tap on the \“Renew License\” button below to get in touch with our manager.</string>
    <string name="your_voicesdk_license_has_expired">Your VoiceSDK license has expired. To continue using the app, please tap on the \“Renew License\” button below to get in touch with our manager.</string>
    <string name="license_expires_at">License expires at %s</string>
</resources>
