<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerStartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_haze"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_oval_logo"
        app:layout_constraintBottom_toTopOf="@+id/biometricsSelectorContainer"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRightSide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftSide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleOfLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/biometrics_made_simple"
        android:textColor="@color/primary_color"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/voiceSdkVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/voiceSdkLicenseExpirationDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/voiceSdkLicenseExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <LinearLayout
        android:id="@+id/biometricsSelectorContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/biometricAnalysisTypeTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.8"
            android:background="@color/black_haze"
            android:foregroundGravity="center"
            android:textAlignment="center"
            android:visibility="visible"
            app:tabGravity="fill"
            app:tabIconTint="@color/selector_tabs_type_bio"
            app:tabIndicatorColor="@color/primary_color"
            app:tabIndicatorGravity="bottom"
            app:tabMaxWidth="0dp"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@color/primary_color"
            app:tabTextColor="@color/pale_sky">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTextDependent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_dependent" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTextIndependent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_independent" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enrollButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enroll"
            android:textColor="@color/button_text_color_state"
            android:visibility="visible"
            app:backgroundTint="@color/button_background_color_state"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/verify"
            android:textColor="@color/button_text_color_state"
            app:backgroundTint="@color/button_background_color_state"
            app:cornerRadius="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>